<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/AttBeneficiaryActivity"
    android:padding="16dp">

    <!-- Imagem -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo"
        android:src="@drawable/img"
        android:scaleType="centerCrop" />

    <EditText
        android:id="@+id/editTextBeneficiaryID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/id_do_benefici_rio"
        android:inputType="number" />

    <EditText
        android:id="@+id/editTextNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome" />

    <EditText
        android:id="@+id/editTextCPF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cpf" />

    <EditText
        android:id="@+id/editTextDataNascimento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/data_de_nascimento_dd_mm_aaaa" />

    <Button
        android:id="@+id/buttonAtualizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/atualizar_beneficiario" />

    <Button
        android:id="@+id/buttonVoltar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/voltar" />

</LinearLayout>
