<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".BeneficiaryListActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todos_beneficiarios"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:paddingBottom="16dp"/>

    <ListView
        android:id="@+id/listViewBeneficiaries"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/buttonAnterior"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anterior"
            android:enabled="false" />

        <Button
            android:id="@+id/buttonProximo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Proximo" />

    </LinearLayout>
    <Button
        android:id="@+id/buttonVoltar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/voltar" />
</LinearLayout>
