<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Imagem -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo"
        android:src="@drawable/img"
        android:scaleType="centerCrop"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <!-- Botão de Entrar -->

    <!-- Botão de Sair -->
    <Button
        android:id="@+id/buttonEntrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="0dp"
        android:text="@string/entrar" />

    <Button
        android:id="@+id/buttonSair"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonEntrar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-3dp"
        android:layout_marginTop="151dp"
        android:layout_marginEnd="3dp"
        android:text="@string/sair" />


</RelativeLayout>