<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SeeBeneficiaryActivity">

    <!-- Imagem -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo"
        android:src="@drawable/img"
        android:scaleType="centerCrop"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <!-- EditText para inserir o ID do beneficiário -->
    <EditText
        android:id="@+id/editTextBeneficiaryID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/id_do_beneficiario"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#546E7A" />

    <!-- Botão de Confirmar -->
    <Button
        android:id="@+id/buttonConfirmar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextBeneficiaryID"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/confirmar" />

    <!-- Botão de Voltar -->
    <Button
        android:id="@+id/buttonVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextBeneficiaryID"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/voltar" />

    <!-- TextView para exibir os dados do beneficiário -->
    <TextView
        android:id="@+id/textViewBeneficiaryDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonConfirmar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="16sp" />

</RelativeLayout>
